# fastapi_start_app

./: .gitignore  docker-compose.yml  pyproject.toml
base-application/: alembic.ini  create_fastapi_app.py  main.py
base-application/alembic/versions/: 2024_08_04_1851-95d2a61e77f7_create_users_table.py  2024_08_04_1854-b7fa9f91c541_update_users_table.py
